3 module for install, archive settings, rex_asd_news::getArchiveNews()

--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,6 @@
 {
     "max-per-page": 5,
     "published-lang": "all",
-    "include-css": true
+    "include-css": true,
+    "min-archive": 10
 }
