add to config news article id, extendes news form, bugfix config save, added langs etc

--- a/data/config.json
+++ b/data/config.json
@@ -2,6 +2,7 @@
     "max-per-page": 5,
     "published-lang": "single",
     "pagination": "pager",
+    "article": null,
     "min-archive": 15,
     "pagination-css-id": "asd-pagination",
     "pager-css-id": "asd-pager",
